--- a/gm.html
+++ b/gm.html
@@ -27,6 +27,41 @@
             const format = navigator.gpu.getPreferredCanvasFormat();
             context.configure({ device, format });
 
+            function createSolidTexture(device, rgba, label) {
+                const texture = device.createTexture({
+                    label,
+                    size: [1, 1, 1],
+                    format: 'rgba8unorm',
+                    usage: GPUTextureUsage.TEXTURE_BINDING | GPUTextureUsage.COPY_DST,
+                });
+                const data = new Uint8Array(rgba);
+                device.queue.writeTexture({ texture }, data, { bytesPerRow: 4 }, [1, 1, 1]);
+                return texture.createView();
+            }
+
+            async function createTextureFromUrl(device, url, label) {
+                try {
+                    const response = await fetch(url, { mode: 'cors' });
+                    const blob = await response.blob();
+                    const imageBitmap = await createImageBitmap(blob, { colorSpaceConversion: 'none' });
+                    const texture = device.createTexture({
+                        label,
+                        size: [imageBitmap.width, imageBitmap.height, 1],
+                        format: 'rgba8unorm',
+                        usage: GPUTextureUsage.TEXTURE_BINDING | GPUTextureUsage.COPY_DST,
+                    });
+                    device.queue.copyExternalImageToTexture(
+                        { source: imageBitmap },
+                        { texture },
+                        [imageBitmap.width, imageBitmap.height]
+                    );
+                    return texture.createView();
+                } catch (err) {
+                    console.warn(`Falling back to solid texture for ${label}:`, err);
+                    return createSolidTexture(device, [255, 255, 255, 255], `${label}-fallback`);
+                }
+            }
+
             // Map definition (1 = wall, 0 = floor, 5-8 = starting position with direction)
             const mapWidth = 10;
             const mapHeight = 10;
@@ -212,9 +247,10 @@
             indexBuffer.unmap();
 
             // Uniform buffer - use individual floats to avoid vec/matrix alignment issues
-            // Layout: cameraPosX, cameraPosY, cameraPosZ, yaw, pitch, fov, viewWidth, viewHeight
+            // Layout: cameraPosX, cameraPosY, cameraPosZ, yaw, pitch, fov, viewWidth, viewHeight, useTextures, padding0..2
+            const uniformFloatCount = 12;
             const uniformBuffer = device.createBuffer({
-                size: 32, // 8 floats * 4 bytes
+                size: uniformFloatCount * 4,
                 usage: GPUBufferUsage.UNIFORM | GPUBufferUsage.COPY_DST
             });
 
@@ -229,6 +265,10 @@
                     fov: f32,
                     viewWidth: f32,
                     viewHeight: f32,
+                    useTextures: f32,
+                    padding0: f32,
+                    padding1: f32,
+                    padding2: f32,
                 };
                 @group(0) @binding(0) var<uniform> u: Uniforms;
 
@@ -301,9 +341,16 @@
                     fov: f32,
                     viewWidth: f32,
                     viewHeight: f32,
+                    useTextures: f32,
+                    padding0: f32,
+                    padding1: f32,
+                    padding2: f32,
                 };
                 @group(0) @binding(0) var<uniform> u: Uniforms;
                 @group(0) @binding(1) var s: sampler;
+                @group(0) @binding(2) var wallTexture: texture_2d<f32>;
+                @group(0) @binding(3) var floorTexture: texture_2d<f32>;
+                @group(0) @binding(4) var ceilingTexture: texture_2d<f32>;
 
                 struct VertexOutput {
                     @builtin(position) clipPos: vec4<f32>,
@@ -342,26 +389,46 @@
                         texV = fract(in.worldPos.z);
                     }
 
-                    // Checkerboard pattern (4x4 per unit)
-                    let checkerU = floor(texU * 4.0);
-                    let checkerV = floor(texV * 4.0);
-                    let checker = (i32(checkerU) + i32(checkerV)) & 1;
-                    let checkerFactor = select(0.7, 1.0, checker == 0);
-
-                    // Different colors based on surface type (matching g.html)
+                    var tileScale = 4.0;
                     var baseColor: vec4<f32>;
-                    if (in.surfaceType > 1.5) {
-                        // Ceiling
-                        baseColor = vec4<f32>(1.0, 1.0, 0.0, 1.0); // Yellow ceiling
-                    } else if (in.surfaceType > 0.5) {
-                        // Wall
-                        baseColor = vec4<f32>(1.0, 0.0, 0.0, 1.0); // Red walls
+                    if (u.useTextures > 0.5) {
+                        if (in.surfaceType > 1.5) {
+                            tileScale = 4.0 / 3.0; // Ceiling texture 3x larger
+                        } else if (in.surfaceType > 0.5) {
+                            tileScale = 4.0 / 5.0; // Wall texture 5x larger
+                        } else {
+                            tileScale = 4.0 / 5.0; // Floor texture 5x larger
+                        }
+                        let sampleUV = vec2<f32>(texU, texV) * tileScale;
+                        if (in.surfaceType > 1.5) {
+                            baseColor = textureSample(ceilingTexture, s, sampleUV);
+                        } else if (in.surfaceType > 0.5) {
+                            baseColor = textureSample(wallTexture, s, sampleUV);
+                        } else {
+                            baseColor = textureSample(floorTexture, s, sampleUV);
+                        }
                     } else {
-                        // Floor
-                        baseColor = vec4<f32>(0.0, 0.0, 1.0, 1.0); // Blue floor
+                        // Checkerboard pattern (4x4 per unit)
+                        let checkerU = floor(texU * 4.0);
+                        let checkerV = floor(texV * 4.0);
+                        let checker = (i32(checkerU) + i32(checkerV)) & 1;
+                        let checkerFactor = select(0.7, 1.0, checker == 0);
+
+                        if (in.surfaceType > 1.5) {
+                            // Ceiling
+                            baseColor = vec4<f32>(1.0, 1.0, 0.0, 1.0); // Yellow ceiling
+                        } else if (in.surfaceType > 0.5) {
+                            // Wall
+                            baseColor = vec4<f32>(1.0, 0.0, 0.0, 1.0); // Red walls
+                        } else {
+                            // Floor
+                            baseColor = vec4<f32>(0.0, 0.0, 1.0, 1.0); // Blue floor
+                        }
+
+                        baseColor *= checkerFactor;
                     }
 
-                    var color = baseColor * checkerFactor;
+                    var color = baseColor;
 
                     // Distance fog (exp2 like g.html)
                     let factor = exp2(-in.viewDist * 0.05);
@@ -762,7 +829,7 @@
                                 }
                             }
 
-                            cursorX = cursorX + GLYPH_WIDTH;
+                            cursorX = cursorX + GLYPH_WIDTH + glyphSpacing;
                             idx = idx + 1u;
                         }
                     }
@@ -844,6 +911,9 @@
                 entries: [
                     { binding: 0, visibility: GPUShaderStage.VERTEX | GPUShaderStage.FRAGMENT, buffer: { type: 'uniform' } },
                     { binding: 1, visibility: GPUShaderStage.FRAGMENT, sampler: { type: 'filtering' } },
+                    { binding: 2, visibility: GPUShaderStage.FRAGMENT, texture: { sampleType: 'float' } },
+                    { binding: 3, visibility: GPUShaderStage.FRAGMENT, texture: { sampleType: 'float' } },
+                    { binding: 4, visibility: GPUShaderStage.FRAGMENT, texture: { sampleType: 'float' } },
                 ]
             });
 
@@ -927,12 +997,26 @@
                 }
             });
 
-            const sampler = device.createSampler({ magFilter: 'linear', minFilter: 'linear' });
+            const [wallTextureView, floorTextureView, ceilingTextureView] = await Promise.all([
+                createTextureFromUrl(device, 'https://threejs.org/examples/textures/brick_diffuse.jpg', 'wall-texture'),
+                createTextureFromUrl(device, 'https://threejs.org/examples/textures/hardwood2_diffuse.jpg', 'floor-texture'),
+                createTextureFromUrl(device, 'https://threejs.org/examples/textures/lava/cloud.png', 'ceiling-texture')
+            ]);
+
+            const sampler = device.createSampler({
+                magFilter: 'linear',
+                minFilter: 'linear',
+                addressModeU: 'repeat',
+                addressModeV: 'repeat'
+            });
             const bindGroup = device.createBindGroup({
                 layout: bindGroupLayout,
                 entries: [
                     { binding: 0, resource: { buffer: uniformBuffer } },
-                    { binding: 1, resource: sampler }
+                    { binding: 1, resource: sampler },
+                    { binding: 2, resource: wallTextureView },
+                    { binding: 3, resource: floorTextureView },
+                    { binding: 4, resource: ceilingTextureView }
                 ]
             });
             console.log('Pipeline and bind group created successfully');
@@ -1046,6 +1130,7 @@
             let mapVisible = false;
             let mapRelativeMode = false;
             let hudVisible = true;
+            let texturesEnabled = false;
 
             document.addEventListener('keydown', (e) => {
                 const key = e.key.toLowerCase();
@@ -1054,6 +1139,8 @@
                         mapVisible = !mapVisible;
                     } else if (key === 'r') {
                         mapRelativeMode = !mapRelativeMode;
+                    } else if (key === 't') {
+                        texturesEnabled = !texturesEnabled;
                     } else if (key === 'h') {
                         hudVisible = !hudVisible;
                     }
@@ -1211,7 +1298,7 @@
                 }
 
                 // Update uniforms with individual floats
-                const data = new Float32Array(8);
+                const data = new Float32Array(uniformFloatCount);
                 data[0] = cameraPos.x;       // cameraPosX
                 data[1] = cameraPos.y;       // cameraPosY
                 data[2] = cameraPos.z;       // cameraPosZ
@@ -1220,6 +1307,10 @@
                 data[5] = fov;
                 data[6] = canvas.width;      // viewWidth
                 data[7] = canvas.height;     // viewHeight
+                data[8] = texturesEnabled ? 1 : 0;
+                data[9] = 0;
+                data[10] = 0;
+                data[11] = 0;
 
                 device.queue.writeBuffer(uniformBuffer, 0, data);
 
@@ -1231,7 +1322,7 @@
                     `FPS: ${fps}`,
                     `Pos: (${cameraPos.x.toFixed(2)}, ${cameraPos.y.toFixed(2)}, ${cameraPos.z.toFixed(2)})`,
                     `Dir: ${direction} (yaw: ${(yaw * 180 / Math.PI).toFixed(1)}°, pitch: ${(pitch * 180 / Math.PI).toFixed(1)}°)`,
-                    `h: HUD; m: map; r: map orientation`
+                    `HUD: ${hudVisible ? 'ON' : 'OFF'} (h)  Map: ${mapVisible ? 'ON' : 'OFF'} (m/r)  Textures: ${texturesEnabled ? 'ON' : 'OFF'} (t)`
                 ];
 
                 const { length: textLength, maxLineLength } = buildOverlayText(lines);
